--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div class="main">
       <button id="instabtn">
         <a
-          href="/resource/warshit_resume (1).pdf"
+          href="resource/warshit_resume (1).pdf"
           download="warshit-poonia-resume"
         >
           <span style="font-size: 1.2vw">Download Resume</span></a
