--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             </div>
             <div class="cards">
               <img src="https://www.kaspersky.com/content/en-global/images/repository/isc/2017-images/What-is-Cyber-Security.jpg" alt="" />
-              <div class="cap"><span>Darkweb Crawler and Scraper</span></div>
+              <div class="cap"><span>web Crawler/Scraper</span></div>
             </div>
             <div class="cards">
               <img src="https://www.kaspersky.com/content/en-global/images/repository/isc/2017-images/What-is-Cyber-Security.jpg" alt="" />
