--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             </div>
             <div class="cards">
               <img src="https://www.kaspersky.com/content/en-global/images/repository/isc/2017-images/What-is-Cyber-Security.jpg" alt="" />
-              <div class="cap"><span>Log Analytics Solution (AWS)</span></div>
+              <div class="cap"><span>Log Analytics Solution</span></div>
             </div>
             <!-- <div class="cards"><img src="" alt=""></div>
             <div class="cards"><img src="" alt=""></div>
