--- a/index.html
+++ b/index.html
@@ -166,11 +166,11 @@
               <div class="cap"><span>PI NAS IOT Device</span></div>
             </div>
             <div class="cards">
-              <img src="https://www.kaspersky.com/content/en-global/images/repository/isc/2017-images/What-is-Cyber-Security.jpg" alt="" />
+              <img src="./resource/11.png" alt="" />
               <div class="cap"><span>web Crawler/Scraper</span></div>
             </div>
             <div class="cards">
-              <img src="https://www.kaspersky.com/content/en-global/images/repository/isc/2017-images/What-is-Cyber-Security.jpg" alt="" />
+              <img src="./resource/12.png" alt="" />
               <div class="cap"><span>Log Analytics Solution</span></div>
             </div>
             <!-- <div class="cards"><img src="" alt=""></div>
